	(CygbuildCmdInstallCheckMain): Fix status code assignment.
	(CygbuildCygcheckLibraryDepGrepPgkNames): Check
	missing cache file better.
	(CygbuildCmdGetSource): Now handles multiple patches
	in Cygwin Net release source packages. Detect *.cygport
	(CygbuildCmdConfAutomake): Simplify.
	(CygbuildCmdConfMain): Run `CygbuildCmdConfAutomake' inside
	.build, not $srcdir.

2007-12-05  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh
	(CygbuildInstallPackageDocs): Fix --test more behavior. Do not
	run the tar command.
	(CygbuildInstallExtraBinFiles): New. Treat CYGWIN-PATCHES/bin
	(CygbuildCmdInstallCheckMakefiles): New. Try to detect use of
	static libraries.
	(CygbuildConfCC): Warn about static library linking during
	./configure
	(CygbuildReadmeReleaseMatchCheck): Use relative path in message
	(CygbuildCmdInstallCheckSetupHintMain): Broke long function
	into pieces. Now also uses `CygbuildMsgFilter' everywhere to
	display colored errors.
	(CygbuildCmdInstallCheckSetupHintCategory): New. Improve
	Perl and Python checks.
	(CygbuildCmdInstallCheckSetupHintDependExists): New (split).
	Chnage [OK] to plain OK.
	(CygbuildCmdInstallCheckSetupHintLdesc): New (split)
	(CygbuildCmdInstallCheckSetupHintSdesc): New (split)
	(CygbuildCmdInstallCheckSetupHintFields): Completely new.
	(CygbuildMsgFilter): Do not print() if there is no output.
	Remove `unset' and add `local' declarations.
	(CygbuildCmdInstallCheckDirEmpty): Add [0-9] to detect all
	numeric content.

2007-12-03  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.pl (BinPkgListing): Add support for *.gz
	tar file.
	(HELP::OPTIONS): Document -C|--color option.
	(HELP::OPTIONAL EXTERNAL DIRECTORIES):
	New topic. Document new feature CYGWIN-PATCHES/bin.

	* bin/cygbuild.sh (CygbuildRunShell): Less output.
	Collect python output to file and dispay them only
	if verbose is set.
	(CygbuildBootVariablesGlobalMain):
	`cygbuild_opt_exclude_version_control' add .mtn.
	`cygbuild_opt_exclude_version_control' add INSTALL.